Verder werken op internationalisation of website
Default taal is nu Engels en je kunt de taal veranderen naar het Nederlands. Nog niet alles werd vertaald, slechts een klein deel momenteel. Ik vertaal verder als de rest van de website meer op punt staat. vertalen kan makkelijk door de t('.xxx')-syntax en dan in zowel in en.yml als nl.yml de vertalingen toe te voegen in dezelfde tree als de dirtree van het project is

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,7 +29,12 @@
 
 en:
   hello_world: "Hello, world!"
-  user: "User"
-  name: "Name"
-  body: "Discription"
-  show: "Show this secret"
+  secrets:
+    List:
+      new: "Make new secret"
+      show: "Show this secret"
+    secret:
+      user: "User"
+      name: "Name"
+      body: "Discription"
+
