--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,7 +33,7 @@ en:
   global:
     user: "User:"
     name: "Name:"
-    body: "Discription:"
+    body: "Description:"
     secret: "Secret"
     secrets: "Secrets"
     adventure: "Adventure"
