--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,6 +61,7 @@ en:
     new:
       title: "New"
       new: "New secret"
+      create: "Create secret"
 
   adventures:
     back-link: "Back to adventures"
