Signing of for the night, not quit finished with following, but mostly there

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,8 @@ en:
     secrets: "Secrets"
     adventure: "Adventure"
     adventures: "Adventures"
+    friend: "Friend"
+    friends: "Friends"
 
   home:
     header:
