--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -38,6 +38,8 @@ nl:
     secrets: "Pareltjes"
     adventure: "Avontuur"
     adventures: "Avonturen"
+    friend: "Vriend"
+    friends: "Vrienden"
       
   home:
     header:
