Finishing followers + TODO: make pretty
nieuwe "users" views aangemaakt (uit devise/registrations gekopieerd, want het is logischer dat deze onder een eigen mapje staan, maar linking moet nog geupdated worden). Followers werken, lijst van followers/followees nog niet geïmplementeerd, code om deze op te vragen staat in users/show.html.erb om te tonen dat het gaat voor bv email

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,8 +38,8 @@ en:
     secrets: "Secrets"
     adventure: "Adventure"
     adventures: "Adventures"
-    friend: "Friend"
-    friends: "Friends"
+    follower: "Follower"
+    followers: "Followers"
 
   home:
     header:
