--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,7 @@ en:
     user: "User: "
     name: "Name: "
     upload-image: "Upload Image: "
-    description: "Discription: "
+    description: "Description: "
     secret: "Secret"
     secrets: "Secrets"
     adventure: "Adventure"
